src/core/Claroline/CoreBundle/Tests/Stub/plugin/extension/Invalid/NonConventionalFQCN1/AdditionalNamespaceSegment/InvalidNonConventionalFQCN1.php
<?php

namespace Invalid\NonConventionalFQCN1\AdditionalNamespaceSegment;

use Claroline\CoreBundle\AbstractType\ClarolineExtension;

class InvalidNonConventionalFQCN1 extends ClarolineExtension
{
   /**
    * Invalid because it adds an extra segment to the FQCN convention.
    */
}